[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
http = "1.1.0"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
open = "5.1"
regex = "1.10.3"
log = "0.4.21"
fern = "0.6.2"
indicatif = "0.17.8"
lazy_static = "1.4.0"
humantime = "2.1.0"
