[package]
name = "sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sniper"
path = "src/lib.rs"

[[bin]]
name = "sniper"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
http = "1.1.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.114"
url = "2.5.0"
open = "5.1"
regex = "1.10.3"
log = "0.4.21"
lazy_static = "1.4.0"
humantime = "2.1.0"

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.indicatif]
version = "0.17.8"

[dependencies.env_logger]
version = "0.11.3"

